Fixed tables being cut off on print

--- a/src/global.scss
+++ b/src/global.scss
@@ -672,10 +672,16 @@ ul{
 			margin-left: -500px;
 
 			// Full width under 1100px
-			@media (max-width: 1100px) {
+			@media screen and (max-width: 1100px) {
 				width: 92%;
 				margin-left: 0;
-				left: 4;
+				left: 4%;
+			}
+			@media print and (max-width: 1100px) {
+				width: 100%;
+				max-width: 100%;
+				margin-left: 0;
+				left: 0%;
 			}
 		}
 
@@ -965,69 +971,116 @@ ul{
 
 
 // Table Styles
-.data-table{
-	font-size: 14.5px;
-	border: 1px solid rgba(0,0,0,0.25);
+@media screen{
+	.data-table{
+		font-size: 14.5px;
+		border: 1px solid rgba(0,0,0,0.25);
+		table-layout: fixed;
+		width: 100%;
+		border-collapse: collapse;
+		margin-bottom: 25px;
+		// background: red;
+	
+		thead{
+			background: rgba(10,10,20,0.05);
+			background-color: white;
+			border-bottom: 1px solid rgba(0,0,0,0.25);
 
-	table-layout: fixed;
-	border-collapse: collapse;
-	margin-bottom: 25px;
-	// background: red;
-  
-	thead{
-		background: rgba(10,10,20,0.05);
-		background-color: white;
-		border-bottom: 1px solid rgba(0,0,0,0.25);
+			tr {
+				display: block;
+				position: relative;
 
-		tr {
-			display: block;
-			position: relative;
-
-			th{
-				font-weight: 600 !important;
-				font-size: 13.5px;
+				th{
+					font-weight: 600 !important;
+					font-size: 13.5px;
+				}
 			}
 		}
-	}
 
-	tbody{
-		display: block;
-		width: 100%;
-		height: 260px;
-		overflow-y: auto;
+		tbody{
+			display: block;
+			width: 100%;
+			height: 260px;
+			overflow-y: auto;
 
-		@media print{
-			height: auto;
-		}
+			
 
-		tr td{
-			border-right: 1px solid rgba(0,0,0,0.25);
-			white-space: pre-wrap;
-			break-inside: auto;
-			// word-wrap: break-word;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-		}
+			tr td{
+				border-right: 1px solid rgba(0,0,0,0.25);
+				white-space: pre-wrap;
+				break-inside: auto;
+				// word-wrap: break-word;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+			}
 
-		tr:nth-child(even) {
-			background: rgba(10,10,20,0.05);
-		}
-	} 
-  
-	// td:nth-child(1), th:nth-child(1) { min-width: 100px; }
-	// td:nth-child(2), th:nth-child(2) { min-width: 100px; }
-	// td:nth-child(3), th:nth-child(3) { width: 100px; }
-	td, th{
-		min-width: 100px;
-		max-width: 100px;
-		padding: 4px;
-	}
-
-	tbody tr:hover{
-		background: rgba(10,15,30,0.15);
-	}
+			tr:nth-child(even) {
+				background: rgba(10,10,20,0.05);
+			}
+		} 
 	
+		// td:nth-child(1), th:nth-child(1) { min-width: 100px; }
+		// td:nth-child(2), th:nth-child(2) { min-width: 100px; }
+		// td:nth-child(3), th:nth-child(3) { width: 100px; }
+		td, th{
+			min-width: 92px;
+			max-width: 92px;
+			padding: 3px;
+		}
+
+		tbody tr:hover{
+			background: rgba(10,15,30,0.15);
+		}
+		
+	}
+}
+
+// Table Styles for Print
+@media print{
+	.data-table{
+		font-size: 13.5px;
+		border: 1px solid rgba(0,0,0,0.25);
+		margin-bottom: 25px;
+		table-layout: fixed;
+		width: 100%;
+
+		thead{
+			border-bottom: 1px solid rgba(0,0,0,0.25);
+			tr {
+				th{
+					font-weight: 600 !important;
+				}
+			}
+		}
+
+		tbody{
+			tr td{
+				border-right: 1px solid rgba(0,0,0,0.25);
+				white-space: pre-wrap;
+				break-inside: auto;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				white-space: nowrap;
+			}
+
+			tr:nth-child(even) {
+				background: rgba(10,10,20,0.05);
+			}
+		} 
+	
+		// td:nth-child(1), th:nth-child(1) { min-width: 100px; }
+		// td:nth-child(2), th:nth-child(2) { min-width: 100px; }
+		// td:nth-child(3), th:nth-child(3) { width: 100px; }
+		td, th{
+			overflow-wrap: anywhere;
+		}
+
+		tbody tr:hover{
+			background: rgba(10,15,30,0.15);
+		}
+		
+	}
 }
 
 
